--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ favicon: assets/favicon.ico # Icon displayed in the tab
 
 # Header and footer text
 header_text: SOHEE's BLOG # Change Blog header text
-header_feature_image: assets/img/header/bg.jpg
+header_feature_image: assets/img/header/bg.png
 header_feature_image_responsive: true
 footer_text: >
   Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
