--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,6 +5,6 @@
   hide: true
   position: 2
 - type-on-strap:
-  title: "Type on Strap"
-  url: https://github.com/sylhare/Type-on-Strap
+  title: ""
+  url: https://shkim00216.github.io/
   position: 1
